--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,11 +7,12 @@ h1 {
   padding: 1rem 0;
 }
 
+
+
 h2 {
   font-size: 1.4rem;
   padding: 0.5rem 0;
 }
-
 
 
 h3 {
@@ -20,4 +21,37 @@ h3 {
 
 .rating span {
   margin: 0.1rem;
+}
+
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+.carousel-caption {
+  position: absolute;
+  top: 0px;
+}
+
+.carousel-caption h4 {
+  color: rgb(20, 20, 20);
+}
+
+.carousel img {
+  display:block;
+  height: 330px;
+  padding: 0px;
+  margin: 50px;
+  border-radius: 5%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.carousel a {
+  margin: 0 auto;
+}
+@media (max-width: 900px) {
+  .carousel-caption h2 {
+    font-size: 2.5vw;
+  }
 }
